Adding page links

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About me</a>
+          <a class="nav-link" href="about.html">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact me</a>
+          <a class="nav-link" href="about.html#contact-link">Contact me</a>
         </li>
       </ul>
     </div>
@@ -47,7 +47,7 @@
     <h1>Farah</h1>
     <h3> Front-end developer, based in Gothenburg</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
+      <a href="about.html#contact" class="contact-link" id="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
   </body>
