--- a/index.html
+++ b/index.html
@@ -19,36 +19,99 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Farah</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html#contact-link">Contact me</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Farah</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact-link">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <h2>👋 Hi I am</h2>
     <h1>Farah</h1>
-    <h3> Front-end developer, based in Gothenburg</h3>
+    <h3>Front-end developer, based in Gothenburg</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link" id="contact-link">Contact me</a>
+      <a href="about.html#contact" class="contact-link" id="contact-link"
+        >Contact me</a
+      >
       <a href="about.html" class="about-link">About me</a>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="images/yoga.png" class="img-fluid rounded" />
+        </div>
+        <div class="col-sm-6">
+          <h2 class="text-start">Yoga app</h2>
+          <p class="text-start">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="btn btn-primary ">Launch Yoga App</div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6">
+                      <h2 class="text-start">Weather app</h2>
+          <p class="text-start">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="btn btn-primary ">Launch Weather App</div>
+        </div>
+                <div class="col-sm-6">
+          <img src="images/weather.png" class="img-fluid rounded" />
+        </div>
+      </div>
+
+<div class="row">
+    <div class="col-sm-6">
+                  <img src="images/yoghurt.png" class="img-fluid rounded" />
+        </div>
+        <div class="col-sm-6">
+          <h2 class="text-start">Yoghurt app</h2>
+          <p class="text-start">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="btn btn-primary ">Launch Yoghurt App</div>
+        </div>
+    </div>
+</div>
+    </div>
+
+
   </body>
 </html>
