--- a/about.html
+++ b/about.html
@@ -28,27 +28,24 @@
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
         blanditiis harum.
-        <br />
-        <br />
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-        <br />
-        <br />
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
       </p>
     </div>
-    <div id="contact">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/yoga.png" class="img-fluid rounded p-2 shadow" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/weather.png" class="img-fluid rounded p-2 shadow" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/yoghurt.png" class="img-fluid rounded p-2 shadow" />
+        </div>
+      </div>
+    </div>
+
+    <div id="contact" class="mt-5 text-center">
       <h2>📮 Contact me</h2>
       <a href="mailto:[email]" class="email-link"> farah.banana@hotmail.com </a>
     </div>
