--- a/about.html
+++ b/about.html
@@ -19,7 +19,39 @@
     <title>About Farah</title>
   </head>
   <body>
-    <a href="index.html" class="homepage-link">Back to homepage</a>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Farah</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact-link">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <h1>About me</h1>
     <h3>Front-end developer from Gothenburg, Sweden</h3>
     <div class="about-paragraphs">
