Updating CSS properties
To match template website

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact-link">Contact me</a>
+              <a class="nav-link" href="about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -54,7 +54,7 @@
     <h2>👋 Hi I am</h2>
     <h1>Farah</h1>
     <h3>Front-end developer, based in Gothenburg</h3>
-    <div class="navigation-links">
+    <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link" id="contact-link"
         >Contact me</a
       >
@@ -67,27 +67,27 @@
           <img src="images/yoga.png" class="img-fluid rounded" />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start">Yoga app</h2>
-          <p class="text-start">
+          <h2 class="text-start mb-3">Yoga app</h2>
+          <p class="text-start mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="btn btn-primary ">Launch Yoga App</div>
+          <div class="btn btn-primary pt-3 pb-3 shadow">Launch Yoga App</div>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mt-5 mb-5">
         <div class="col-sm-6">
-                      <h2 class="text-start">Weather app</h2>
-          <p class="text-start">
+                      <h2 class="text-start mb-3">Weather app</h2>
+          <p class="text-start mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="btn btn-primary ">Launch Weather App</div>
+          <div class="btn btn-primary pt-3 pb-3 shadow">Launch Weather App</div>
         </div>
                 <div class="col-sm-6">
           <img src="images/weather.png" class="img-fluid rounded" />
@@ -99,14 +99,14 @@
                   <img src="images/yoghurt.png" class="img-fluid rounded" />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start">Yoghurt app</h2>
-          <p class="text-start">
+          <h2 class="text-start mb-3">Yoghurt app</h2>
+          <p class="text-start mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="btn btn-primary ">Launch Yoghurt App</div>
+          <div class="btn btn-primary pt-3 pb-3 shadow">Launch Yoghurt App</div>
         </div>
     </div>
 </div>
