--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
     <title>About Farah</title>
   </head>
   <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Farah</a>
@@ -37,15 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link active" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact-link">Contact me</a>
+              <a class="nav-link" href="about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -55,7 +52,7 @@
     <h1>About me</h1>
     <h3>Front-end developer from Gothenburg, Sweden</h3>
     <div class="about-paragraphs">
-      <p>
+      <p class="text-center m-3">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
