adding email to link

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
     <div id="contact" class="mt-5 text-center">
       <h2>📮 Contact me</h2>
-      <a href="mailto:[email]" class="email-link"> farah.banana@hotmail.com </a>
+      <a href="mailto:farah.banana@hotmail.com" class="email-link"> farah.banana@hotmail.com </a>
     </div>
   </body>
 </html>
