changing div to link for buttons

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="btn btn-primary pt-3 pb-3 shadow">Launch Yoga App</div>
+          <a href="#" class="btn btn-primary pt-3 pb-3 shadow">Launch Yoga App</a>
         </div>
       </div>
 
@@ -87,7 +87,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="btn btn-primary pt-3 pb-3 shadow">Launch Weather App</div>
+          <a href="#" class="btn btn-primary pt-3 pb-3 shadow">Launch Weather App</a>
         </div>
                 <div class="col-sm-6">
           <img src="images/weather.png" class="img-fluid rounded" />
@@ -106,7 +106,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="btn btn-primary pt-3 pb-3 shadow">Launch Yoghurt App</div>
+          <a href="#" class="btn btn-primary pt-3 pb-3 shadow">Launch Yogurt App</a>
         </div>
     </div>
 </div>
