Updating page content to own real content

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/city.png" class="img-fluid rounded" />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start mb-3">Yoga app</h2>
+          <h2 class="text-start mb-3">Gothenburg City app</h2>
           <p class="text-start mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="#" class="btn btn-primary pt-3 pb-3 shadow">Launch Yoga App</a>
+          <a href="https://stellular-jelly-b1319e.netlify.app/" target="_blank" class="btn btn-primary pt-3 pb-3 shadow">Launch Gothenburg City App</a>
         </div>
       </div>
 
@@ -87,7 +87,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="#" class="btn btn-primary pt-3 pb-3 shadow">Launch Weather App</a>
+          <a href="https://dazzling-fox-d3f6a7.netlify.app/" target="_blank" class="btn btn-primary pt-3 pb-3 shadow">Launch Weather App</a>
         </div>
                 <div class="col-sm-6">
           <img src="images/weather.png" class="img-fluid rounded" />
