--- a/index.html
+++ b/index.html
@@ -74,44 +74,56 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="https://stellular-jelly-b1319e.netlify.app/" target="_blank" class="btn btn-primary pt-3 pb-3 shadow">Launch Gothenburg City App</a>
+          <a
+            href="https://stellular-jelly-b1319e.netlify.app/"
+            target="_blank"
+            class="btn btn-primary pt-3 pb-3 shadow"
+            >Launch Gothenburg City App</a
+          >
         </div>
       </div>
 
       <div class="row mt-5 mb-5">
         <div class="col-sm-6">
-                      <h2 class="text-start mb-3">Weather app</h2>
+          <h2 class="text-start mb-3">Weather app</h2>
           <p class="text-start mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="https://dazzling-fox-d3f6a7.netlify.app/" target="_blank" class="btn btn-primary pt-3 pb-3 shadow">Launch Weather App</a>
+          <a
+            href="https://dazzling-fox-d3f6a7.netlify.app/"
+            target="_blank"
+            class="btn btn-primary pt-3 pb-3 shadow"
+            >Launch Weather App</a
+          >
         </div>
-                <div class="col-sm-6">
+        <div class="col-sm-6">
           <img src="images/weather.png" class="img-fluid rounded" />
         </div>
       </div>
 
-<div class="row">
-    <div class="col-sm-6">
-                  <img src="images/yoghurt.png" class="img-fluid rounded" />
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="images/clock.png" class="img-fluid rounded" />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start mb-3">Yoghurt app</h2>
+          <h2 class="text-start mb-3">World Clock app</h2>
           <p class="text-start mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="#" class="btn btn-primary pt-3 pb-3 shadow">Launch Yogurt App</a>
+          <a
+            href="https://hilarious-torrone-3d0f81.netlify.app/"
+            target="_blank"
+            class="btn btn-primary pt-3 pb-3 shadow"
+            >Launch World Clock App</a
+          >
         </div>
+      </div>
     </div>
-</div>
-    </div>
-
-
   </body>
 </html>
