Adding own content to page

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mt-5 mb-5">
         <div class="col-sm-6">
-          <img src="images/clock.png" class="img-fluid rounded" />
+          <img src="images/bachata.png" class="img-fluid rounded" />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start mb-3">World Clock app</h2>
+          <h2 class="text-start mb-3">Bachata Landing app</h2>
           <p class="text-start mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -117,12 +117,33 @@
             explicabo eum dolore.
           </p>
           <a
-            href="https://hilarious-torrone-3d0f81.netlify.app/"
+            href="https://whimsical-panda-0a14e7.netlify.app/"
             target="_blank"
             class="btn btn-primary pt-3 pb-3 shadow"
-            >Launch World Clock App</a
+            >Launch Bachata landing App</a
           >
         </div>
+      </div>
+    </div>
+
+    <div class="row mt-5 mb-5">
+      <div class="col-sm-6">
+        <img src="images/clock.png" class="img-fluid rounded" />
+      </div>
+      <div class="col-sm-6">
+        <h2 class="text-start mb-3">World Clock app</h2>
+        <p class="text-start mb-3">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+          quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+          eos eveniet alias temporibus deserunt veritatis minima fugiat
+          explicabo eum dolore.
+        </p>
+        <a
+          href="https://hilarious-torrone-3d0f81.netlify.app/"
+          target="_blank"
+          class="btn btn-primary pt-3 pb-3 shadow"
+          >Launch World Clock App</a
+        >
       </div>
     </div>
   </body>
