UPdating layout on smaller screen and making more SEO friendly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Farah</title>
+    <meta
+      name="description"
+      content="This webbpage contains the portfoilio of Farah, with all ther front-end projects."
+    />
+    <title>Homepage of Farah https://lively-moonbeam-e48281.netlify.app/</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +20,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
@@ -64,11 +69,15 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/city.png" class="img-fluid rounded" />
+          <img
+            src="images/city.png"
+            alt="gothenburg city"
+            class="index-img img-fluid rounded"
+          />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start mb-3">Gothenburg City app</h2>
-          <p class="text-start mb-3">
+          <h2 class="mb-3">Gothenburg City app</h2>
+          <p class=" mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -78,6 +87,7 @@
             href="https://stellular-jelly-b1319e.netlify.app/"
             target="_blank"
             class="btn btn-primary pt-3 pb-3 shadow"
+            title="Gothenburg City Landingpage Link"
             >Launch Gothenburg City App</a
           >
         </div>
@@ -85,8 +95,8 @@
 
       <div class="row mt-5 mb-5">
         <div class="col-sm-6">
-          <h2 class="text-start mb-3">Weather app</h2>
-          <p class="text-start mb-3">
+          <h2 class="mb-3">Weather app</h2>
+          <p class=" mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -96,21 +106,30 @@
             href="https://dazzling-fox-d3f6a7.netlify.app/"
             target="_blank"
             class="btn btn-primary pt-3 pb-3 shadow"
+            title="Weather App Link"
             >Launch Weather App</a
           >
         </div>
         <div class="col-sm-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            alt="weather app"
+            class="index-img img-fluid rounded"
+          />
         </div>
       </div>
 
       <div class="row mt-5 mb-5">
         <div class="col-sm-6">
-          <img src="images/bachata.png" class="img-fluid rounded" />
+          <img
+            src="images/bachata.png"
+            alt="bachata dance app"
+            class="index-img img-fluid rounded"
+          />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start mb-3">Bachata Landing app</h2>
-          <p class="text-start mb-3">
+          <h2 class="mb-3">Bachata Landing app</h2>
+          <p class=" mb-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -120,30 +139,36 @@
             href="https://whimsical-panda-0a14e7.netlify.app/"
             target="_blank"
             class="btn btn-primary pt-3 pb-3 shadow"
-            >Launch Bachata landing App</a
+            title="Bachata Landingpage Link"
+            >Launch Bachata Landing App</a
           >
         </div>
       </div>
-    </div>
 
-    <div class="row mt-5 mb-5">
-      <div class="col-sm-6">
-        <img src="images/clock.png" class="img-fluid rounded" />
-      </div>
-      <div class="col-sm-6">
-        <h2 class="text-start mb-3">World Clock app</h2>
-        <p class="text-start mb-3">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-          quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-          eos eveniet alias temporibus deserunt veritatis minima fugiat
-          explicabo eum dolore.
-        </p>
-        <a
-          href="https://hilarious-torrone-3d0f81.netlify.app/"
-          target="_blank"
-          class="btn btn-primary pt-3 pb-3 shadow"
-          >Launch World Clock App</a
-        >
+      <div class="row mt-5 mb-5">
+        <div class="col-sm-6">
+          <h2 class="mb-3">World Clock app</h2>
+          <p class=" mb-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a
+            href="https://hilarious-torrone-3d0f81.netlify.app/"
+            target="_blank"
+            class="btn btn-primary pt-3 pb-3 shadow"
+            title="World Clock App Link"
+            >Launch World Clock App</a
+          >
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="images/clock.png"
+            alt="world clock app"
+            class="index-img img-fluid rounded"
+          />
+        </div>
       </div>
     </div>
   </body>
