--- a/about.html
+++ b/about.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This webbpage contains the portfoilio of Farah, with all ther front-end projects."
+    />
+    <title>
+      About page of Farah https://lively-moonbeam-e48281.netlify.app/
+    </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +23,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>About Farah</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -61,22 +67,45 @@
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid rounded p-2 shadow" />
+      <div class="row mt-3 mb-3">
+        <div class="col-sm-6">
+          <img
+            src="images/city.png"
+            alt="gothenburg city"
+            class="img-fluid rounded"
+          />
         </div>
-        <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid rounded p-2 shadow" />
+        <div class="col-sm-6">
+          <img
+            src="images/bachata.png"
+            alt="bachata dance app"
+            class="img-fluid rounded"
+          />
         </div>
-        <div class="col-sm-4">
-          <img src="images/yoghurt.png" class="img-fluid rounded p-2 shadow" />
+      </div>
+      <div class="row mt-3 mb-3">
+        <div class="col-sm-6">
+          <img
+            src="images/weather.png"
+            alt="weather app"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="images/clock.png"
+            alt="world clock app"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
     </div>
 
     <div id="contact" class="mt-5 text-center">
       <h2>📮 Contact me</h2>
-      <a href="mailto:farah.banana@hotmail.com" class="email-link"> farah.banana@hotmail.com </a>
+      <a href="mailto:farah.banana@hotmail.com" class="email-link">
+        farah.banana@hotmail.com
+      </a>
     </div>
   </body>
 </html>
