updating grid layout

--- a/index.html
+++ b/index.html
@@ -76,39 +76,43 @@
           />
         </div>
         <div class="col-sm-6">
-          <h2 class="mb-3">Gothenburg City app</h2>
-          <p class=" mb-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <a
-            href="https://stellular-jelly-b1319e.netlify.app/"
-            target="_blank"
-            class="btn btn-primary pt-3 pb-3 shadow"
-            title="Gothenburg City Landingpage Link"
-            >Launch Gothenburg City App</a
-          >
+          <div class="contain-text">
+            <h2 class="mb-3">Gothenburg City app</h2>
+            <p class="mb-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="https://stellular-jelly-b1319e.netlify.app/"
+              target="_blank"
+              class="btn btn-primary pt-3 pb-3 shadow"
+              title="Gothenburg City Landingpage Link"
+              >Launch Gothenburg City App</a
+            >
+          </div>
         </div>
       </div>
 
       <div class="row mt-5 mb-5">
         <div class="col-sm-6">
-          <h2 class="mb-3">Weather app</h2>
-          <p class=" mb-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <a
-            href="https://dazzling-fox-d3f6a7.netlify.app/"
-            target="_blank"
-            class="btn btn-primary pt-3 pb-3 shadow"
-            title="Weather App Link"
-            >Launch Weather App</a
-          >
+          <div class="contain-text">
+            <h2 class="mb-3">Weather app</h2>
+            <p class="mb-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="https://dazzling-fox-d3f6a7.netlify.app/"
+              target="_blank"
+              class="btn btn-primary pt-3 pb-3 shadow"
+              title="Weather App Link"
+              >Launch Weather App</a
+            >
+          </div>
         </div>
         <div class="col-sm-6">
           <img
@@ -128,39 +132,43 @@
           />
         </div>
         <div class="col-sm-6">
-          <h2 class="mb-3">Bachata Landing app</h2>
-          <p class=" mb-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <a
-            href="https://whimsical-panda-0a14e7.netlify.app/"
-            target="_blank"
-            class="btn btn-primary pt-3 pb-3 shadow"
-            title="Bachata Landingpage Link"
-            >Launch Bachata Landing App</a
-          >
+          <div class="contain-text">
+            <h2 class="mb-3">Bachata Landing app</h2>
+            <p class="mb-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="https://whimsical-panda-0a14e7.netlify.app/"
+              target="_blank"
+              class="btn btn-primary pt-3 pb-3 shadow"
+              title="Bachata Landingpage Link"
+              >Launch Bachata Landing App</a
+            >
+          </div>
         </div>
       </div>
 
       <div class="row mt-5 mb-5">
         <div class="col-sm-6">
-          <h2 class="mb-3">World Clock app</h2>
-          <p class=" mb-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <a
-            href="https://hilarious-torrone-3d0f81.netlify.app/"
-            target="_blank"
-            class="btn btn-primary pt-3 pb-3 shadow"
-            title="World Clock App Link"
-            >Launch World Clock App</a
-          >
+          <div class="contain-text">
+            <h2 class="mb-3">World Clock app</h2>
+            <p class="mb-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="https://hilarious-torrone-3d0f81.netlify.app/"
+              target="_blank"
+              class="btn btn-primary pt-3 pb-3 shadow"
+              title="World Clock App Link"
+              >Launch World Clock App</a
+            >
+          </div>
         </div>
         <div class="col-sm-6">
           <img
