adding content to page and updating page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Farah</a>
+        <a class="navbar-brand" href="/index.html">Farah Alhaddad</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -58,7 +58,7 @@
 
     <h2>👋 Hi I am</h2>
     <h1>Farah</h1>
-    <h3>Front-end developer, based in Gothenburg</h3>
+    <h3>Front-end developer, based in Gothenburg, Sweden</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link" id="contact-link"
         >Contact me</a
@@ -70,26 +70,23 @@
       <div class="row">
         <div class="col-sm-6">
           <img
-            src="images/city.png"
+            src="images/gote.svg"
             alt="gothenburg city"
-            class="index-img img-fluid rounded"
+            class="index-img img-fluid rounded  border border-3"
           />
         </div>
         <div class="col-sm-6">
           <div class="contain-text">
-            <h2 class="mb-3">Gothenburg City app</h2>
+            <h2 class="mb-3">Gothenburg City</h2>
             <p class="mb-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              Gothenburg city landing page. Coded with HTML, CSS and JavaScript.
             </p>
             <a
               href="https://stellular-jelly-b1319e.netlify.app/"
               target="_blank"
               class="btn btn-primary pt-3 pb-3 shadow"
               title="Gothenburg City Landingpage Link"
-              >Launch Gothenburg City App</a
+              >Go to Landing Page</a
             >
           </div>
         </div>
@@ -100,25 +97,23 @@
           <div class="contain-text">
             <h2 class="mb-3">Weather app</h2>
             <p class="mb-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              Weather Application. Coded with HTML, CSS, JavaScript.
+              <br />Linked to SheCodes Weather API.
             </p>
             <a
               href="https://dazzling-fox-d3f6a7.netlify.app/"
               target="_blank"
               class="btn btn-primary pt-3 pb-3 shadow"
               title="Weather App Link"
-              >Launch Weather App</a
+              >Launch Application</a
             >
           </div>
         </div>
         <div class="col-sm-6">
           <img
-            src="images/weather.png"
+            src="images/weatherimg.svg"
             alt="weather app"
-            class="index-img img-fluid rounded"
+            class="index-img img-fluid rounded  border border-3"
           />
         </div>
       </div>
@@ -126,26 +121,23 @@
       <div class="row mt-5 mb-5">
         <div class="col-sm-6">
           <img
-            src="images/bachata.png"
+            src="images/bachataimg.svg"
             alt="bachata dance app"
-            class="index-img img-fluid rounded"
+            class="index-img img-fluid rounded border border-3"
           />
         </div>
         <div class="col-sm-6">
           <div class="contain-text">
             <h2 class="mb-3">Bachata Landing app</h2>
             <p class="mb-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              Bachata Landing Page. Coded with HTML, CSS, JavaScript.
             </p>
             <a
               href="https://whimsical-panda-0a14e7.netlify.app/"
               target="_blank"
               class="btn btn-primary pt-3 pb-3 shadow"
               title="Bachata Landingpage Link"
-              >Launch Bachata Landing App</a
+              >Go to Landing Page</a
             >
           </div>
         </div>
@@ -156,25 +148,23 @@
           <div class="contain-text">
             <h2 class="mb-3">World Clock app</h2>
             <p class="mb-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              World Clock Application. Coded with HTML, CSS, JavaScript. Linked
+              to moment.js.
             </p>
             <a
               href="https://hilarious-torrone-3d0f81.netlify.app/"
               target="_blank"
               class="btn btn-primary pt-3 pb-3 shadow"
               title="World Clock App Link"
-              >Launch World Clock App</a
+              >Launch Application</a
             >
           </div>
         </div>
         <div class="col-sm-6">
           <img
-            src="images/clock.png"
+            src="images/worldclockimg.svg"
             alt="world clock app"
-            class="index-img img-fluid rounded"
+            class="index-img img-fluid rounded border border-3"
           />
         </div>
       </div>
