--- a/about.html
+++ b/about.html
@@ -58,11 +58,34 @@
     <h1>About me</h1>
     <h3>Front-end developer from Gothenburg, Sweden</h3>
     <div class="about-paragraphs">
-      <p class="text-center m-3">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
+      <p class="text-left m-3">
+        Hello, I am Farah Alhaddad, a skilled front-end developer based in
+        Sweden. When I am not working, I enjoy spending quality time with my
+        loved ones and exploring my passion for Bachata dancing.
+        <br />
+        <br />
+        For me, coding is a way of expressing my creativity and problem-solving
+        skills. I find joy in tackling challenging tasks, such as creating
+        landing pages or developing weather applications.
+        <br />
+        <br />
+        My professional journey started in the textile industry, where I studied
+        to become a pattern maker. As a technical designer, my role was to
+        assist the designer in bringing their vision to life by creating
+        technical instructions and moulds for factories. This experience has
+        given me a strong foundation in problem-solving and collaboration, which
+        I have found to be invaluable in my current profession.
+        <br />
+        <br />
+        After exploring various career options, I decided to transition into
+        front-end development. I enrolled in a program with www.shecodes.io,
+        where I have gained valuable experience and knowledge that has helped me
+        to grow as a developer.
+        <br />
+        <br />
+        Currently, I am focusing on completing my studies, seeking out new
+        project ideas, and actively searching for my next opportunity to join a
+        team and contribute my skills and experience as a front-end developer.
       </p>
     </div>
 
@@ -70,32 +93,32 @@
       <div class="row mt-3 mb-3">
         <div class="col-sm-6">
           <img
-            src="images/city.png"
+            src="images/gote.svg"
             alt="gothenburg city"
-            class="img-fluid rounded"
+            class="img-fluid rounded border border-3"
           />
         </div>
         <div class="col-sm-6">
           <img
-            src="images/bachata.png"
+            src="images/bachataimg.svg"
             alt="bachata dance app"
-            class="img-fluid rounded"
+            class="img-fluid rounded border border-3"
           />
         </div>
       </div>
       <div class="row mt-3 mb-3">
         <div class="col-sm-6">
           <img
-            src="images/weather.png"
+            src="images/weatherimg.svg"
             alt="weather app"
-            class="img-fluid rounded"
+            class="img-fluid rounded border border-3"
           />
         </div>
         <div class="col-sm-6">
           <img
-            src="images/clock.png"
+            src="images/worldclockimg.svg"
             alt="world clock app"
-            class="img-fluid rounded"
+            class="img-fluid rounded border border-3"
           />
         </div>
       </div>
@@ -103,9 +126,47 @@
 
     <div id="contact" class="mt-5 text-center">
       <h2>📮 Contact me</h2>
-      <a href="mailto:farah.banana@hotmail.com" class="email-link">
-        farah.banana@hotmail.com
+
+      <a href="mailto:farah.alhaddad@hotmail.com" class="email-link">
+        farah.alhaddad@hotmail.com
       </a>
+      <p>+46 70 090 27 89</p>
+    </div>
+
+    <div class="position-relative m-4">
+      <div
+        class="progress"
+        aria-label="Progress"
+        aria-valuenow="50"
+        aria-valuemin="0"
+        aria-valuemax="100"
+        style="height: 4px"
+      >
+        <div class="" style="width: 50%"></div>
+      </div>
+      <button
+        type="button"
+        class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-primary rounded-pill"
+      >
+        <div class="icons">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/farah-alhaddad-a8204069"
+          >
+            <img class="icons" src="images/linkedin.svg" alt="linkedin" />
+          </a>
+        </div>
+      </button>
+      <button
+        type="button"
+        class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill"
+      >
+        <div class="icons">
+          <a target="_blank" href="https://github.com/Farahalh">
+            <img class="icons" src="images/github.svg" alt="github" />
+          </a>
+        </div>
+      </button>
     </div>
   </body>
 </html>
