--- a/about.html
+++ b/about.html
@@ -124,49 +124,35 @@
       </div>
     </div>
 
-    <div id="contact" class="mt-5 text-center">
+    <div id="contact" class="contactMe mt-5 text-center">
       <h2>📮 Contact me</h2>
 
       <a href="mailto:farah.alhaddad@hotmail.com" class="email-link">
         farah.alhaddad@hotmail.com
       </a>
-      <p>+46 70 090 27 89</p>
+      <p class="phone">+46 70 090 27 89</p>
+
+      <div class="social">
+          <div class="icon">
+      <a
+        target="_blank"
+        href="https://www.linkedin.com/in/farah-alhaddad-a8204069"
+      >
+        <img class="icons" src="images/linkedin.svg" alt="linkedin" />
+      </a>
     </div>
 
-    <div class="position-relative m-4">
-      <div
-        class="progress"
-        aria-label="Progress"
-        aria-valuenow="50"
-        aria-valuemin="0"
-        aria-valuemax="100"
-        style="height: 4px"
-      >
-        <div class="" style="width: 50%"></div>
-      </div>
-      <button
-        type="button"
-        class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-primary rounded-pill"
-      >
-        <div class="icons">
-          <a
-            target="_blank"
-            href="https://www.linkedin.com/in/farah-alhaddad-a8204069"
-          >
-            <img class="icons" src="images/linkedin.svg" alt="linkedin" />
-          </a>
-        </div>
-      </button>
-      <button
-        type="button"
-        class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill"
-      >
-        <div class="icons">
-          <a target="_blank" href="https://github.com/Farahalh">
-            <img class="icons" src="images/github.svg" alt="github" />
-          </a>
-        </div>
-      </button>
+    <div class="icon">
+      <a target="_blank" href="https://github.com/Farahalh">
+        <img class="icons" src="images/github.svg" alt="github" />
+      </a>
     </div>
+      </div>
+
+    </div>
+
+
+
+    
   </body>
 </html>
