--- a/about.html
+++ b/about.html
@@ -8,9 +8,7 @@
       name="description"
       content="This webbpage contains the portfoilio of Farah, with all ther front-end projects."
     />
-    <title>
-      About page of Farah https://lively-moonbeam-e48281.netlify.app/
-    </title>
+    <title>About page of Farah www.farahalh.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Farah</a>
+        <a class="navbar-brand" href="index.html">Farah Alhaddad</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -133,26 +131,21 @@
       <p class="phone">+46 70 090 27 89</p>
 
       <div class="social">
-          <div class="icon">
-      <a
-        target="_blank"
-        href="https://www.linkedin.com/in/farah-alhaddad-a8204069"
-      >
-        <img class="icons" src="images/linkedin.svg" alt="linkedin" />
-      </a>
-    </div>
+        <div class="icon">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/farah-alhaddad-a8204069"
+          >
+            <img class="icons" src="images/linkedin.svg" alt="linkedin" />
+          </a>
+        </div>
 
-    <div class="icon">
-      <a target="_blank" href="https://github.com/Farahalh">
-        <img class="icons" src="images/github.svg" alt="github" />
-      </a>
-    </div>
+        <div class="icon">
+          <a target="_blank" href="https://github.com/Farahalh">
+            <img class="icons" src="images/github.svg" alt="github" />
+          </a>
+        </div>
       </div>
-
     </div>
-
-
-
-    
   </body>
 </html>
