--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="This webbpage contains the portfoilio of Farah, with all ther front-end projects."
     />
-    <title>Homepage of Farah https://lively-moonbeam-e48281.netlify.app/</title>
+    <title>Homepage of Farah www.faraalh.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Farah Alhaddad</a>
+        <a class="navbar-brand" href="index.html">Farah Alhaddad</a>
         <button
           class="navbar-toggler"
           type="button"
