--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
@@ -57,7 +62,7 @@
     </nav>
 
     <h2>👋 Hi I am</h2>
-    <h1>Farah</h1>
+    <h1>Farah Alhaddad</h1>
     <h3>Front-end developer, based in Gothenburg, Sweden</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link" id="contact-link"
@@ -72,7 +77,7 @@
           <img
             src="images/gote.svg"
             alt="gothenburg city"
-            class="index-img img-fluid rounded  border border-3"
+            class="index-img img-fluid rounded border border-3"
           />
         </div>
         <div class="col-sm-6">
@@ -92,7 +97,7 @@
         </div>
       </div>
 
-      <div class="row mt-5 mb-5">
+      <div class="row mt-3 mb-3">
         <div class="col-sm-6">
           <div class="contain-text">
             <h2 class="mb-3">Weather app</h2>
@@ -113,12 +118,12 @@
           <img
             src="images/weatherimg.svg"
             alt="weather app"
-            class="index-img img-fluid rounded  border border-3"
+            class="index-img img-fluid rounded border border-3"
           />
         </div>
       </div>
 
-      <div class="row mt-5 mb-5">
+      <div class="row mt-3 mb-3">
         <div class="col-sm-6">
           <img
             src="images/bachataimg.svg"
@@ -143,7 +148,7 @@
         </div>
       </div>
 
-      <div class="row mt-5 mb-5">
+      <div class="row mt-3 mb-3">
         <div class="col-sm-6">
           <div class="contain-text">
             <h2 class="mb-3">World Clock app</h2>
