--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Farah Alhaddad</a>
+        <a class="navbarLogo navbar-brand" href="index.html"
+          ><img src="images/logo.svg" alt="logo" class="logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -61,15 +63,24 @@
       </div>
     </nav>
 
-    <h2>👋 Hi I am</h2>
-    <h1>Farah Alhaddad</h1>
-    <h3>Front-end developer, based in Gothenburg, Sweden</h3>
-    <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link" id="contact-link"
-        >Contact me</a
-      >
-      <a href="about.html" class="about-link">About me</a>
-    </div>
+    <header class="hero">
+      <div class="heroHeader">
+        <div>
+          <h2>👋 Hi I am</h2>
+          <h1>Farah Alhaddad</h1>
+          <h3>Front-end developer, based in Gothenburg, Sweden</h3>
+        </div>
+        <div class="heroImg">
+          <img src="images/heroImage.svg" alt="profile picture" />
+        </div>
+      </div>
+      <div class="navigation-links mb-5">
+        <a href="about.html#contact" class="contact-link" id="contact-link"
+          >Contact me</a
+        >
+        <a href="about.html" class="about-link">About me</a>
+      </div>
+    </header>
 
     <div class="container">
       <div class="row">
@@ -89,9 +100,9 @@
             <a
               href="https://stellular-jelly-b1319e.netlify.app/"
               target="_blank"
-              class="btn btn-primary pt-3 pb-3 shadow"
+              class="btn btn-primary pt-3 pb-3"
               title="Gothenburg City Landingpage Link"
-              >Go to Landing Page</a
+              >Go to Page</a
             >
           </div>
         </div>
@@ -142,7 +153,7 @@
               target="_blank"
               class="btn btn-primary pt-3 pb-3 shadow"
               title="Bachata Landingpage Link"
-              >Go to Landing Page</a
+              >Go to Page</a
             >
           </div>
         </div>
