--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,9 +33,9 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Farah Alhaddad</a>
+        <a class="initials navbar-brand" href="index.html">FA</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,10 +50,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html#contact">Contact me</a>
@@ -59,7 +65,7 @@
       </div>
     </nav>
 
-    <h1>About me</h1>
+    <h1 class="mb-3">About me</h1>
     <h3>Front-end developer from Gothenburg, Sweden</h3>
     <div class="about-paragraphs">
       <p class="text-left m-3">
@@ -93,65 +99,30 @@
       </p>
     </div>
 
-    <div class="container">
-      <div class="row mt-3 mb-3">
-        <div class="col-sm-6">
-          <img
-            src="images/gote.svg"
-            alt="gothenburg city"
-            class="img-fluid rounded border border-3"
-          />
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="images/bachataimg.svg"
-            alt="bachata dance app"
-            class="img-fluid rounded border border-3"
-          />
-        </div>
-      </div>
-      <div class="row mt-3 mb-3">
-        <div class="col-sm-6">
-          <img
-            src="images/weatherimg.svg"
-            alt="weather app"
-            class="img-fluid rounded border border-3"
-          />
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="images/worldclockimg.svg"
-            alt="world clock app"
-            class="img-fluid rounded border border-3"
-          />
-        </div>
-      </div>
-    </div>
-
-    <div id="contact" class="contactMe mt-5 text-center">
+      <footer>
+            <div id="contact" class="contactMe d-flex justify-content-center mb-3">
       <h2>📮 Contact me</h2>
-
-      <a href="mailto:farah.alhaddad@hotmail.com" class="email-link">
-        farah.alhaddad@hotmail.com
-      </a>
-      <p class="phone">+46 70 090 27 89</p>
-
-      <div class="social">
-        <div class="icon">
-          <a
-            target="_blank"
-            href="https://www.linkedin.com/in/farah-alhaddad-a8204069"
-          >
-            <img class="icons" src="images/linkedin.svg" alt="linkedin" />
-          </a>
-        </div>
-
-        <div class="icon">
-          <a target="_blank" href="https://github.com/Farahalh">
-            <img class="icons" src="images/github.svg" alt="github" />
-          </a>
-        </div>
       </div>
+        <div class="d-flex justify-content-center mb-3">
+          <a href="mailto:farah.alhaddad@hotmail.com" class="email-link">
+            farah.alhaddad@hotmail.com
+          </a>
+        </div>
+        <div class="phone d-flex justify-content-center mb-3">
+          <p class="phone">+46 70 090 27 89</p>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/Farahalh" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/farah-alhaddad-a8204069/"
+            target="_blank"
+          >
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
