adding link to shecodes.io

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
         <br />
         <br />
         After exploring various career options, I decided to transition into
-        front-end development. I enrolled in a program with www.shecodes.io,
+        front-end development. I enrolled in a program with <a href="www.shecodes.io" class="shecodesLink">www.shecodes.io</a>,
         where I have gained valuable experience and knowledge that has helped me
         to grow as a developer.
         <br />
