adding profile picture

--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
       </div>
     </nav>
 
+    <img src="images/heroImage.svg" alt="profile picture" class="heroImage d-flex justify-content-center mb-3">
     <h1 class="mb-3">About me</h1>
     <h3>Front-end developer from Gothenburg, Sweden</h3>
     <div class="about-paragraphs">
