updating email link and footer css

--- a/about.html
+++ b/about.html
@@ -105,8 +105,8 @@
       <h2>📮 Contact me</h2>
       </div>
         <div class="d-flex justify-content-center mb-3">
-          <a href="mailto:farah.alhaddad@hotmail.com" class="email-link">
-            farah.alhaddad@hotmail.com
+          <a href="mailto:farah90.alhaddad@hotmail.com" class="email-link">
+            farah90.alhaddad@gmail.com
           </a>
         </div>
         <div class="phone d-flex justify-content-center mb-3">
