Cleaning code, updating page layout, making navbar and footer 100% width adding new project to page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="initials navbar-brand" href="index.html">FA</a>
         <button
@@ -67,7 +67,7 @@
       </div>
     </nav>
 
-    <hero>
+    <header>
       <div class="heroRighLeft">
         <div class="heroRight">
           <h2>👋 Hi I am</h2>
@@ -81,8 +81,9 @@
           <a href="about.html" class="about-link">About me</a>
         </div>
       </div>
-    </hero>
+    </header>
 
+    <main>
     <div class="workContainer">
       <div class="row">
         <div class="col-sm-6">
@@ -145,7 +146,7 @@
         </div>
         <div class="col-sm-6">
           <div class="contain-text">
-            <h2 class="mb-3">Bachata Landing app</h2>
+            <h2 class="mb-3">Bachata Landing Page</h2>
             <p class="projectText mb-3">
               Bachata Landing Page. Coded with HTML, CSS, JavaScript.
             </p>
@@ -185,6 +186,32 @@
           />
         </div>
       </div>
+
+            <div class="row mt-3 mb-3">
+        <div class="col-sm-6">
+          <img
+            src="images/workout.svg"
+            alt="workout landing page"
+            class="index-img img-fluid rounded border border-3"
+          />
+        </div>
+        <div class="col-sm-6">
+          <div class="contain-text">
+            <h2 class="mb-3">Workout Landing Page</h2>
+            <p class="projectText mb-3">
+              Workout Landing Page. Coded with HTML and CSS.
+            </p>
+            <a
+              href="https://workout-landing-page.netlify.app"
+              target="_blank"
+              class="projectBtns btn btn-primary pt-3 pb-3 shadow"
+              title="Bachata Landingpage Link"
+              >Go to Page</a
+            >
+          </div>
+        </div>
+      </div>
+      </main>
 
       <footer>
             <div id="contact" class="contactMe d-flex justify-content-center mb-3">
